# ucsb-writing-data

./: .gitignore  LICENSE  README.md  embeddings.py  pyproject.toml  query.ipynb  query.py  rag.ipynb  requirements.txt  visualize.ipynb
lib/: __init__.py
